Add event map to event and change details pages to be cohesive between all role based interfaces